force-app/main/default/objects/Closing_Form__c/fields/Tenancy_agreement_or_Ejari__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_agreement_or_Ejari__c</fullName>
    <label>Tenancy agreement or Ejari?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>