force-app/main/default/objects/Closing_Form__c/fields/Tenant_Agenc__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Agenc__c</fullName>
    <label>Tenant Agent Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agent_Structure</valueSetName>
    </valueSet>
</CustomField>