force-app/main/default/objects/Closing_Form__c/fields/Tenant_Agency_Fee__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Agency_Fee__c</fullName>
    <label>Tenant Agency Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>