force-app/main/default/objects/Closing_Form__c/fields/Tenant_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Contact_Number__c</fullName>
    <label>Tenant Contact Number</label>
    <type>Phone</type>
</CustomField>