force-app/main/default/objects/Closing_Form__c/fields/Tenant_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Email_Address__c</fullName>
    <label>Tenant Email Address</label>
    <type>Email</type>
</CustomField>