force-app/main/default/objects/Closing_Form__c/fields/Tenant_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Name__c</fullName>
    <label>Tenant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>