force-app/main/default/objects/Closing_Form__c/fields/Tenant_Represented_By__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Represented_By__c</fullName>
    <label>Agent Name Representing Tenant</label>
    <length>200</length>
    <type>Text</type>
</CustomField>