force-app/main/default/objects/Closing_Form__c/fields/Third_Broker__c.field-meta.xml
<CustomField>
    <fullName>Third_Broker__c</fullName>
    <label>Third Broker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>