force-app/main/default/objects/Closing_Form__c/fields/Third_Broker_Amount__c.field-meta.xml
<CustomField>
    <fullName>Third_Broker_Amount__c</fullName>
    <label>Third Broker Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>