force-app/main/default/objects/Closing_Form__c/fields/Title_Deed_No__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_No__c</fullName>
    <label>Title Deed No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>