force-app/main/default/objects/Closing_Form__c/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <formula>Buyer_Agency_Fee__c +  Seller_Agency_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>