force-app/main/default/objects/Closing_Form__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready Property</fullName>
            </value>
            <value>
                <fullName>Offplan Primary</fullName>
            </value>
            <value>
                <fullName>Offplan Secondary</fullName>
            </value>
            <value>
                <fullName>Referral Fee Reservation</fullName>
            </value>
            <value>
                <fullName>New Developments - Exclusive Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>