force-app/main/default/objects/Closing_Form__c/recordTypes/Off_Plan.recordType-meta.xml
<RecordType>
    <fullName>Off_Plan</fullName>
    <active>true</active>
    <label>Off Plan Closing Request</label>
</RecordType>