force-app/main/default/objects/Closing_Form__c/recordTypes/Referral.recordType-meta.xml
<RecordType>
    <fullName>Referral</fullName>
    <active>true</active>
    <label>Referral Closing Request</label>
</RecordType>