force-app/main/default/objects/Closing_Form__c/recordTypes/Rental.recordType-meta.xml
<RecordType>
    <fullName>Rental</fullName>
    <active>true</active>
    <label>Rental Closing Request</label>
</RecordType>