force-app/main/default/objects/Closing_Form__c/recordTypes/Resale.recordType-meta.xml
<RecordType>
    <fullName>Resale</fullName>
    <active>true</active>
    <label>Resale Contract Request</label>
</RecordType>