force-app/main/default/objects/Closing_Form__c/validationRules/Not_to_edit_the_form_by_agent_once_moved.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_to_edit_the_form_by_agent_once_moved</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISCHANGED( Status__c ), $Profile.Name  = &quot;Pb Agent&quot;,
PRIORVALUE(Status__c) = &quot;In Progress&quot;)</errorConditionFormula>
    <errorMessage>Request form should not be edited once the status is &quot;In Progress&quot;.</errorMessage>
</ValidationRule>