force-app/main/default/objects/Closing_Form__c/listViews/ALL_Request_Form.listView-meta.xml
<ListView>
    <fullName>ALL_Request_Form</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Buyer_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Request Form</label>
</ListView>